<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/display_text"
        android:textSize="@dimen/greetings_string_size"
        />

    <EditText
        android:padding="@dimen/cardview_compat_inset_shadow"
        android:id="@+id/display2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/display_text"
        android:textSize="@dimen/greetings_string_size"
        />

    <TableLayout
        android:layout_margin="@dimen/default_margin"
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_Universal"
                android:textColor="#12EA1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ThemeDay"
                android:text="google"
                android:textSize="15sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_tel"
                android:textColor="#D6C213"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeDay"
                android:text="Telefon"
                android:textSize="10sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_C"
                android:textColor="#D6C213"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeDay"
                android:text="@string/c"
                android:textSize="10sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/childButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ThemeDay"
                android:text="push"/>



        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_1"
                style="@style/ThemeDay"
                android:text="@string/_1"
                android:textSize="30sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_2"
                style="@style/ThemeDay"
                android:text="@string/_2"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_3"
                style="@style/ThemeDay"
                android:text="@string/_3"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_plus"
                style="@style/ThemeDay"
                android:text="@string/plus"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_4"
                style="@style/ThemeDay"
                android:text="@string/_4"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_5"
                style="@style/ThemeDay"
                android:text="@string/_5"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_6"
                style="@style/ThemeDay"
                android:text="@string/_6"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_minus"
                style="@style/ThemeDay"
                android:text="@string/minus"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_7"
                style="@style/ThemeDay"
                android:text="@string/_7"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_8"
                style="@style/ThemeDay"
                android:text="@string/_8"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_9"
                style="@style/ThemeDay"
                android:text="@string/_9"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_divide"
                style="@style/ThemeDay"
                android:text="@string/divide"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="fill_parent"
            android:layout_height="30pt"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_dec"
                style="@style/ThemeDay"
                android:text="@string/point"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_zero"
                style="@style/ThemeDay"
                android:text="@string/_0"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_equals"
                style="@style/ThemeDay"
                android:text="@string/button12"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_multy"
                style="@style/ThemeDay"
                android:text="@string/multi"
                android:textSize="30sp"/>

        </TableRow>


    </TableLayout>

</LinearLayout>